--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,96 +1,242 @@
-body{
-    font-family: sans-serif;
-    max-width: 100vw;
-    margin: 0;
-}
-header{
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    margin: auto;
-    width: 60%;
-    justify-content: space-between;              
-    transition-duration: 0.5s;
-}
-a{
-    text-decoration: none;
-    color: black;
-}
-    header>div{
-        margin: 0vh 0.4vw;
+@media screen and (min-width: 900px){
+    body{
+        font-family: sans-serif;
+        max-width: 100vw;
+        margin: 0;
     }
-    #main_name{
-        /* animation: 2s ease-out 0s 1 slideInFromLeft; */
-        font-size: 3vw;
-        color: rgb(57, 210, 251);
+    header{
+        padding-top: 5vh;
+        padding-bottom: 5vh;
         margin: auto;
-        margin-bottom: 5vh;
+        width: 60%;
     }
-    #main_name>p{
-        text-align: center;
-        margin: auto;  
+    #display_menu{
+        display: none;
     }
-    #main_menu{
-        margin: auto;
-        /* animation: 2s ease-out 0s 1 slideInFromRight; */
-        position: -webkit-sticky;
-        background-color: white;
+    a{
+        text-decoration: none;
+        color: black;
     }
-        #main_menu>ul{
-            display: flex;
-            justify-content: center;
-            list-style-type: none;
-            border-top: 1px solid rgb(1, 11, 56);
-            border-bottom: 1px solid rgb(1, 11, 56);
-            padding: 1vh 0;
-            max-width: 100%;
-            font-size: 1vw;
+        header>div{
+            margin: 0vh 0.4vw;
         }
-            #main_menu>ul>li{
-                margin: 0 2vw;
+        #main_name{
+            /* animation: 2s ease-out 0s 1 slideInFromLeft; */
+            font-size: 3vw;
+            color: rgb(57, 210, 251);
+            margin: auto;
+            margin-bottom: 5vh;
+        }
+        #main_name>p{
+            text-align: center;
+            margin: auto;  
+        }
+        #main_menu{
+            margin: auto;
+            /* animation: 2s ease-out 0s 1 slideInFromRight; */
+            /* position: -webkit-sticky; */
+            background-color: white;
+        }
+            #main_menu>ul{
+                display: flex;
+                justify-content: center;
+                list-style-type: none;
+                padding: 1vh 0;
+                max-width: 100%;
+                font-size: 1vw;
             }
-            #main_menu>ul>li>a{
-                transition-duration: 0.5s;
-            }
-            #main_menu>ul>li>a:hover{
-                color: grey;
-                transition-duration:0.5s;
-            }
-#index_main_content{
-    width: 60%;
-    margin: auto;
-    min-height: 200vh;
-}
-#index_main_content>ul{
-    margin-top: 0px;
-}   
-#index_main_content>ul>li{
-    margin-bottom: 2vh;
-    line-height: 150%;
-}        
-/* @keyframes slideInFromLeft {
-    0% {
-        transform: translateX(-100%);
+                #main_menu>ul>li{
+                    padding: 2vh 1vw;
+                    margin: 0 2vw;
+                    border-right: 1px solid lightgrey;
+                    border-bottom: 1px solid lightgrey;
+                    border-radius: 15px 0px;
+                    background: linear-gradient(315deg, lightgrey 0%, white 45%);
+                }
+                #main_menu>ul>li>a{
+                    transition-duration: 0.3s;
+                }
+                #main_menu>ul>li>a:hover{
+                    color: grey;
+                    transition-duration:0.3s;
+                }
+    #index_main_content{
+        width: 60%;
+        margin: auto;
+        min-height: 200vh;
     }
-    100% {
-        transform: translateX(0);
+    #index_main_content>ul{
+        margin-top: 0px;
+    }   
+    #index_main_content>ul>li{
+        margin-bottom: 2vh;
+        line-height: 150%;
+    }        
+    /* @keyframes slideInFromLeft {
+        0% {
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(0);
+        }
     }
-}
-@keyframes slideInFromRight {
-    0% {
-        transform: translateX(200%);
-    }
-    100% {
-        transform: translateX(0);
-    }
-} */
+    @keyframes slideInFromRight {
+        0% {
+            transform: translateX(200%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    } */
 
-.from-right, .from-left {
-    opacity: 0;
-    transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+    .from-right, .from-left {
+        opacity: 0;
+        transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+    }
+    .from-right {
+        transform: translate(50px,-30px);
+    }
+    .from-left {
+        transform: translate(-50px,-30px);
+    }
+
+    .logo{
+        list-style-type: none;
+        text-align: center;
+    }
+    .logo>a>img{
+        /* border: 1px solid rgb(196, 195, 195); */
+    }
+    #epilepsy{
+        max-width: 70%;
+        border-radius: 15px;
+    }
 }
-.from-right {
-    transform: translate(50px,-30px);
-}
-.from-left {
-    transform: translate(-50px,-30px);
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+@media screen and (max-width: 900px){
+    body{
+        font-family: sans-serif;
+        max-width: 100vw;
+        margin: 0;
+        padding: 0.5vh 0.5vw;
+    }
+    header{
+        padding-top: 2vh;
+        padding-left: 3vw;
+        padding-bottom: 2vh;
+        margin: auto;
+        width: 100%;
+    }
+    #display_menu{
+
+    }
+    #img_menu{
+        width: 15vw;
+    }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+        header>div{
+            margin: 0vh 0.4vw;
+        }
+        #mobile_menu{
+            display: flex;
+        }
+        #main_name{
+            /* animation: 2s ease-out 0s 1 slideInFromLeft; */
+            font-size: 250%;
+            color: rgb(57, 210, 251);
+            margin: auto;
+            max-width: 85vw;
+
+        }
+        #main_name>p{
+            text-align: center;
+            margin: auto;  
+        }
+        #main_menu{
+            display: none;
+            margin: auto;
+            /* animation: 2s ease-out 0s 1 slideInFromRight; */
+            /* position: -webkit-sticky; */
+            background-color: white;
+        }
+            #main_menu>ul{
+                justify-content: center;
+                list-style-type: none;
+                padding: 1vh 0;
+                max-width: 100%;
+                font-size: 200%;
+            }
+                #main_menu>ul>li{
+                    padding: 2vh 1vw;
+                    margin: 0 2vw;
+                    border-right: 1px solid lightgrey;
+                    border-bottom: 1px solid lightgrey;
+                    border-radius: 15px 0px;
+                    background: linear-gradient(315deg, lightgrey 0%, white 45%);
+                }
+                #main_menu>ul>li>a{
+                    transition-duration: 0.3s;
+                }
+                #main_menu>ul>li>a:hover{
+                    color: grey;
+                    transition-duration:0.3s;
+                }
+    #index_main_content{
+        width: 90%;
+        margin: auto;
+        min-height: 200vh;
+        text-align: center;
+    }
+    #index_main_content>ul{
+        margin-top: 0px;
+    }   
+    #index_main_content>ul>li{
+        margin-bottom: 2vh;
+        line-height: 150%;
+    }        
+    /* @keyframes slideInFromLeft {
+        0% {
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+    @keyframes slideInFromRight {
+        0% {
+            transform: translateX(200%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    } */
+    
+    .from-right, .from-left {
+        opacity: 0;
+        transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+    }
+    .from-right {
+        transform: translate(50px,-30px);
+    }
+    .from-left {
+        transform: translate(-50px,-30px);
+    }
+    
+    .logo{
+        list-style-type: none;
+        text-align: center;
+    }
+    .logo>a>img{
+        max-width: 50%;
+        /* border: 1px solid rgb(196, 195, 195); */
+    }
+    #epilepsy{
+        max-width: 70%;
+        border-radius: 15px;
+    }
 }
